# zhibi

./: .gitignore  AUTO-UPDATE.md  BUGFIX-PLAN.md  BUG_REPORT.md  CHANGELOG-v0.3.4.md  HANDOFF.md  README.md  SESSION-NOTES.md  STANDARD-OPERATING-PROCEDURE.md  TEST-RESULTS.md  USER-TEST-CHECKLIST.md  USER-TEST-REPORT.md  _chat_block_temp.txt  _search_db.js  _temp_original_settings.tsx  check-layout.cjs  diff-char3.cjs  index.html  package-lock.json  package.json  tailwind.config.js  temp_src_layouts_AiChatPanel.tsx  temp_src_lib_memory-updater.ts  temp_src_modules_characters_CharactersModule.tsx  temp_src_modules_material_MaterialModule.tsx  temp_src_modules_outline_WorldviewPanel.tsx  temp_src_modules_writing_WritingModule.tsx  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
docs/: ## GitHub Copilot Chat.md  12zhunze.md  ACCEPTANCE-CRITERIA.md  ARCHITECTURE-DECISIONS.md  ARCHITECTURE-GAP.md  AUDIT-VERIFICATION-20260621.md  BEFORE-AFTER.md  BUG-OVERLAY-SCROLL.md  FULL-AUDIT-20260621.md  META-REVIEW-20260621.md  PROJECT.md  REMEDIATION-PLAN-v3.1.md  REMEDIATION-PLAN.md  TODO-AI-CONTEXT-IMPROVE-2.0.md  TODO-AI-CONTEXT-IMPROVE.md  TODO-V3.0-完善.md  TODO-V4.0-完善.md  humanizer-zh-skill.md
docs-voice/: PROJECT.md
scripts/: README.md  auto-git.cjs  build-exe.bat  clean-old-builds.bat  cleanup-editor.cjs  dev-web.ps1  diagnose-groups-advanced.js  diagnose-groups.js  gen-icns.py  (+7 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: English.nsh  FileAssociation.nsh  installer.nsi  utils.nsh
src-tauri/src/: lib.rs  main.rs  models.rs
src-tauri/src/commands/: ai.rs  db_cmds.rs  export.rs  mod.rs
src-tauri/src/db/: mod.rs  schema.sql
(+131 files in other folders)
