[package]
name = "zhibi"
version = "0.1.0"
description = "执笔 · 先定章法，再落笔墨"
authors = ["you"]
edition = "2021"

[lib]
name = "zhibi_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
keyring = "3"
dirs = "6"
zip = "2"
base64 = "0.22"
